externals/tecio/teciosrc/TECIO.h

EXTERNC tecio_API int32_t tecZoneFaceNbrGetMode(
    void*    fileHandle,
    int32_t  zone,
    int32_t* mode);
EXTERNC tecio_API int32_t tecZoneFaceNbrGetNumConnections(
    void*    fileHandle,
    int32_t  zone,
    int64_t* numConnections);
EXTERNC tecio_API int32_t tecZoneFaceNbrGetNumValues(
    void*    fileHandle,
    int32_t  zone,
    int64_t* numValues);
EXTERNC tecio_API int32_t tecZoneFaceNbrsAre64Bit(
    void*    fileHandle,
    int32_t  zone,
    int32_t* are64Bit);
EXTERNC tecio_API int32_t tecZoneGetIJK(
    void*    fileHandle,
    int32_t  zone,
    int64_t* iMax,
    int64_t* jMax,
    int64_t* kMax);
EXTERNC tecio_API int32_t tecZoneGetParentZone(
    void*    fileHandle,
    int32_t  zone,
    int32_t* parentZone);
EXTERNC tecio_API int32_t tecZoneGetSolutionTime(
    void*   fileHandle,
    int32_t zone,
    double* solutionTime);
EXTERNC tecio_API int32_t tecZoneGetStrandID(
    void*    fileHandle,
    int32_t  zone,
    int32_t* strandID);
EXTERNC tecio_API int32_t tecZoneGetTitle(
    void*   fileHandle,
    int32_t zone,
    char**  title);
EXTERNC tecio_API int32_t tecZoneGetType(
    void*    fileHandle,
    int32_t  zone,
    int32_t* type);
EXTERNC tecio_API int32_t tecZoneIsEnabled(
    void*   fileHandle,
    int32_t  zone,
    int32_t* isEnabled);
EXTERNC tecio_API int32_t tecZoneNodeMapGet(
    void*    fileHandle,
    int32_t  zone,
    int64_t  startCell,
    int64_t  numCells,
    int32_t* nodeMap);
EXTERNC tecio_API int32_t tecZoneNodeMapGet64(
    void*    fileHandle,
    int32_t  zone,
    int64_t  startCell,
    int64_t  numCells,
    int64_t* nodeMap);
EXTERNC tecio_API int32_t tecZoneNodeMapGetNumValues(
    void*    fileHandle,
    int32_t  zone,
    int64_t  numCells,
    int64_t* numValues);
EXTERNC tecio_API int32_t tecZoneNodeMapIs64Bit(
    void*    fileHandle,
    int32_t  zone,
    int32_t* is64Bit);
EXTERNC tecio_API int32_t tecZonePolyGetBoundaryConnectionCounts(
    void*    fileHandle,
    int32_t  zone,
    int64_t  startConnection,
    int64_t  numConnections,
    int32_t* connectionCounts);
EXTERNC tecio_API int32_t tecZonePolyGetBoundaryConnections(
    void*    fileHandle,
    int32_t  zone,
    int64_t  startConnection,
    int64_t  numConnections,
    int32_t* connectedElements,
    int32_t* connectedZones);
EXTERNC tecio_API int32_t tecZonePolyGetFaceElems(
    void*    fileHandle,
    int32_t  zone,
    int64_t  startFace,
    int64_t  numFaces,
    int32_t* leftElems,
    int32_t* rightElems);
EXTERNC tecio_API int32_t tecZonePolyGetFaceNodeCounts(
    void*    fileHandle,
    int32_t  zone,
    int64_t  startFace,
    int64_t  numFaces,
    int32_t* nodeCounts);
EXTERNC tecio_API int32_t tecZonePolyGetFaceNodes(
    void*    fileHandle,
    int32_t  zone,
    int64_t  startFace,
    int64_t  numFaces,
    int32_t* faceNodes);
EXTERNC tecio_API int32_t tecZonePolyGetNumConnectedBoundaryFaces(
    void*    fileHandle,
    int32_t  zone,
    int64_t* numFaces);
EXTERNC tecio_API int32_t tecZonePolyGetTotalNumFaceNodes(
    void*    fileHandle,
    int32_t  zone,
    int64_t* numNodes);
EXTERNC tecio_API int32_t tecZonePolyGetTotalNumBoundaryConnections(
    void*    fileHandle,
    int32_t  zone,
    int64_t* numConnections);
EXTERNC tecio_API int32_t tecZoneVarGetDoubleValues(
    void*   fileHandle,
    int32_t zone,
    int32_t var,
    int64_t startIndex,
    int64_t numValues,
    double* values);
EXTERNC tecio_API int32_t tecZoneVarGetFloatValues(
    void*   fileHandle,
    int32_t zone,
    int32_t var,
    int64_t startIndex,
    int64_t numValues,
    float*  values);
EXTERNC tecio_API int32_t tecZoneVarGetInt16Values(
    void*    fileHandle,
    int32_t  zone,
    int32_t  var,
    int64_t  startIndex,
    int64_t  numValues,
    int16_t* values);