externals/tecio/teciosrc/tecio.f90


integer(c_int32_t) function tecZoneFaceNbrGetNumConnections( &
  fileHandle, &
  zone, &
  numConnections) &
  bind (c, name="tecZoneFaceNbrGetNumConnections")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), intent(out)       :: numConnections
end function tecZoneFaceNbrGetNumConnections

integer(c_int32_t) function tecZoneFaceNbrGetMode( &
  fileHandle, &
  zone, &
  mode) &
  bind (c, name="tecZoneFaceNbrGetMode")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: mode
end function tecZoneFaceNbrGetMode

integer(c_int32_t) function tecZoneFaceNbrGetNumValues( &
  fileHandle, &
  zone, &
  numValues) &
  bind (c, name="tecZoneFaceNbrGetNumValues")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), intent(out)       :: numValues
end function tecZoneFaceNbrGetNumValues

integer(c_int32_t) function tecZoneFaceNbrsAre64Bit( &
  fileHandle, &
  zone, &
  are64Bit) &
  bind (c, name="tecZoneFaceNbrsAre64Bit")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: are64Bit
end function tecZoneFaceNbrsAre64Bit

integer(c_int32_t) function tecZoneGetIJK( &
  fileHandle, &
  zone, &
  iMax, &
  jMax, &
  kMax) &
  bind (c, name="tecZoneGetIJK")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), intent(out)       :: iMax
  integer(c_int64_t), intent(out)       :: jMax
  integer(c_int64_t), intent(out)       :: kMax
end function tecZoneGetIJK

integer(c_int32_t) function tecZoneGetParentZone( &
  fileHandle, &
  zone, &
  parentZone) &
  bind (c, name="tecZoneGetParentZone")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: parentZone
end function tecZoneGetParentZone

integer(c_int32_t) function tecZoneGetSolutionTime( &
  fileHandle, &
  zone, &
  solutionTime) &
  bind (c, name="tecZoneGetSolutionTime")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  real(c_double), intent(out)           :: solutionTime
end function tecZoneGetSolutionTime

integer(c_int32_t) function tecZoneGetStrandID( &
  fileHandle, &
  zone, &
  strandID) &
  bind (c, name="tecZoneGetStrandID")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: strandID
end function tecZoneGetStrandID

integer(c_int32_t) function tecZoneGetTitle( &
  fileHandle, &
  zone, &
  title) &
  bind (c, name="tecZoneGetTitle")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  type(c_ptr), intent(out)              :: title
end function tecZoneGetTitle

integer(c_int32_t) function tecZoneGetType( &
  fileHandle, &
  zone, &
  type) &
  bind (c, name="tecZoneGetType")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: type
end function tecZoneGetType

integer(c_int32_t) function tecZoneIsEnabled( &
  fileHandle, &
  zone, &
  isEnabled) &
  bind (c, name="tecZoneIsEnabled")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: isEnabled
end function tecZoneIsEnabled

integer(c_int32_t) function tecZoneNodeMapGet( &
  fileHandle, &
  zone, &
  startCell, &
  numCells, &
  nodeMap) &
  bind (c, name="tecZoneNodeMapGet")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: startCell
  integer(c_int64_t), value, intent(in) :: numCells
  integer(c_int32_t), intent(out)       :: nodeMap(*)
end function tecZoneNodeMapGet

integer(c_int32_t) function tecZoneNodeMapGet64( &
  fileHandle, &
  zone, &
  startCell, &
  numCells, &
  nodeMap) &
  bind (c, name="tecZoneNodeMapGet64")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: startCell
  integer(c_int64_t), value, intent(in) :: numCells
  integer(c_int64_t), intent(out)       :: nodeMap(*)
end function tecZoneNodeMapGet64

integer(c_int32_t) function tecZoneNodeMapGetNumValues( &
  fileHandle, &
  zone, &
  numCells, &
  numValues) &
  bind (c, name="tecZoneNodeMapGetNumValues")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: numCells
  integer(c_int64_t), intent(out)       :: numValues
end function tecZoneNodeMapGetNumValues

integer(c_int32_t) function tecZoneNodeMapIs64Bit( &
  fileHandle, &
  zone, &
  is64Bit) &
  bind (c, name="tecZoneNodeMapIs64Bit")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), intent(out)       :: is64Bit
end function tecZoneNodeMapIs64Bit

integer(c_int32_t) function tecZonePolyGetBoundaryConnectionCounts( &
  fileHandle, &
  zone, &
  startConnection, &
  numConnections, &
  connectionCounts) &
  bind (c, name="tecZonePolyGetBoundaryConnectionCounts")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: startConnection
  integer(c_int64_t), value, intent(in) :: numConnections
  integer(c_int32_t), intent(out)       :: connectionCounts(*)
end function tecZonePolyGetBoundaryConnectionCounts

integer(c_int32_t) function tecZonePolyGetBoundaryConnections( &
  fileHandle, &
  zone, &
  startConnection, &
  numConnections, &
  connectedElements, &
  connectedZones) &
  bind (c, name="tecZonePolyGetBoundaryConnections")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: startConnection
  integer(c_int64_t), value, intent(in) :: numConnections
  integer(c_int32_t), intent(out)       :: connectedElements(*)
  integer(c_int32_t), intent(out)       :: connectedZones(*)
end function tecZonePolyGetBoundaryConnections

integer(c_int32_t) function tecZonePolyGetFaceElems( &
  fileHandle, &
  zone, &
  startFace, &
  numFaces, &
  leftElems, &
  rightElems) &
  bind (c, name="tecZonePolyGetFaceElems")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: startFace
  integer(c_int64_t), value, intent(in) :: numFaces
  integer(c_int32_t), intent(out)       :: leftElems(*)
  integer(c_int32_t), intent(out)       :: rightElems(*)
end function tecZonePolyGetFaceElems

integer(c_int32_t) function tecZonePolyGetFaceNodeCounts( &
  fileHandle, &
  zone, &
  startFace, &
  numFaces, &
  nodeCounts) &
  bind (c, name="tecZonePolyGetFaceNodeCounts")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: startFace
  integer(c_int64_t), value, intent(in) :: numFaces
  integer(c_int32_t), intent(out)       :: nodeCounts(*)
end function tecZonePolyGetFaceNodeCounts

integer(c_int32_t) function tecZonePolyGetFaceNodes( &
  fileHandle, &
  zone, &
  startFace, &
  numFaces, &
  faceNodes) &
  bind (c, name="tecZonePolyGetFaceNodes")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), value, intent(in) :: startFace
  integer(c_int64_t), value, intent(in) :: numFaces
  integer(c_int32_t), intent(out)       :: faceNodes(*)
end function tecZonePolyGetFaceNodes

integer(c_int32_t) function tecZonePolyGetNumConnectedBoundaryFaces( &
  fileHandle, &
  zone, &
  numFaces) &
  bind (c, name="tecZonePolyGetNumConnectedBoundaryFaces")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), intent(out)       :: numFaces(*)
end function tecZonePolyGetNumConnectedBoundaryFaces

integer(c_int32_t) function tecZonePolyGetTotalNumFaceNodes( &
  fileHandle, &
  zone, &
  numNodes) &
  bind (c, name="tecZonePolyGetTotalNumFaceNodes")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), intent(out)       :: numNodes
end function tecZonePolyGetTotalNumFaceNodes

integer(c_int32_t) function tecZonePolyGetTotalNumBoundaryConnections( &
  fileHandle, &
  zone, &
  numConnections) &
  bind (c, name="tecZonePolyGetTotalNumBoundaryConnections")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int64_t), intent(out)       :: numConnections
end function tecZonePolyGetTotalNumBoundaryConnections

integer(c_int32_t) function tecZoneVarGetDoubleValues( &
  fileHandle, &
  zone, &
  var, &
  startIndex, &
  numValues, &
  values) &
  bind (c, name="tecZoneVarGetDoubleValues")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), value, intent(in) :: var
  integer(c_int64_t), value, intent(in) :: startIndex
  integer(c_int64_t), value, intent(in) :: numValues
  real(c_double), intent(out)           :: values(*)
end function tecZoneVarGetDoubleValues

integer(c_int32_t) function tecZoneVarGetFloatValues( &
  fileHandle, &
  zone, &
  var, &
  startIndex, &
  numValues, &
  values) &
  bind (c, name="tecZoneVarGetFloatValues")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), value, intent(in) :: var
  integer(c_int64_t), value, intent(in) :: startIndex
  integer(c_int64_t), value, intent(in) :: numValues
  real(c_float), intent(out)            :: values(*)
end function tecZoneVarGetFloatValues

integer(c_int32_t) function tecZoneVarGetInt16Values( &
  fileHandle, &
  zone, &
  var, &
  startIndex, &
  numValues, &
  values) &
  bind (c, name="tecZoneVarGetInt16Values")
  use iso_c_binding
  implicit none
  type(c_ptr), value, intent(in)        :: fileHandle
  integer(c_int32_t), value, intent(in) :: zone
  integer(c_int32_t), value, intent(in) :: var
  integer(c_int64_t), value, intent(in) :: startIndex
  integer(c_int64_t), value, intent(in) :: numValues
  integer(c_int16_t), intent(out)       :: values(*)
end function tecZoneVarGetInt16Values
